<resources>
    <string name="app_name">布谷天气</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="search">搜索</string>
    <string name="weather">天气</string>
    <string name="lifeindex">生活</string>
    <string name="me">我</string>
</resources>
