<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/skyblue"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:background="@drawable/icon"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <TextView
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:text="y"
        android:id="@+id/edit_username"
        android:hint="@string/username"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/corners_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:text="y"
        android:layout_marginTop="30dp"
        android:id="@+id/edit_password"
        android:hint="@string/password"
        android:password="true"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/corners_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:background="@drawable/corners_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_weight="1"
            android:gravity="left|center"
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/clear"
            android:text="@string/register"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/clear"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF" />
    </LinearLayout>
        
        </LinearLayout>

</LinearLayout>
