<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.xtcel.idleitemsassistant.RegisterActivity">
    <LinearLayout
        android:background="@color/skyblue"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_gravity="center"
            android:background="@drawable/camera_btn"
            android:id="@+id/add_picture_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/username_et"
            android:hint="@string/username"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:background="@drawable/corners_et_bg"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/password_et"
            android:hint="@string/password"
            android:paddingLeft="30dp"
            android:password="true"
            android:singleLine="true"
            android:background="@drawable/corners_et_bg"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <EditText
            android:id="@+id/mail_et"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:hint="邮箱"
            android:singleLine="true"
            android:background="@drawable/corners_et_bg"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>
        <EditText
            android:id="@+id/nickname_et"
            android:layout_marginTop="30dp"
            android:paddingLeft="30dp"
            android:hint="昵称"
            android:singleLine="true"
            android:background="@drawable/corners_et_bg"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>
        <Button
            android:id="@+id/btn_register_register"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/bluecorners_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
</LinearLayout>
